# Mugi

./: .gitignore  Makefile  README.md  ea.ipynb  main.py  pyproject.toml  sinewave.ipynb
files/: 100hz.flac  200hz.flac  300hz.flac  400hz.flac  500hz.flac
src/: simple_ea.py
src/algorithms/: euclidean_ea.py  model_ea.py  simple_ea.py
src/base/: ealgorithm.py
src/base/algorithms/: crossover.py  mutation.py  selection.py
src/experiments/algorithms/: euclidean_deap.py  euclidean_ea.py  model_ea.py  simple_ea.py
src/utils/: sine.py
