[tool.poetry]
name = "tcc-eesynth"
version = "0.1.0"
description = "TCC relacionado a sintese de som"
authors = ["REIS0 <aor@cesar.school>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.1"
SoundFile = "^0.10.3"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
