[tool.poetry]
name = "tcc-eesynth"
version = "0.1.0"
description = "TCC relacionado a sintese de som"
authors = ["REIS0 <aor@cesar.school>"]
license = "Mozilla Public License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.1"
SoundFile = "^0.10.3"
matplotlib = "^3.4.3"
deap = "^1.3.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^3.9.2"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
